# Book_projectW8

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.nb_backup_20260714/: 2_GoogleBooks_API.ipynb  3_Merge_cleaning.ipynb  App_building.ipynb
app/: app.py
data/clean/: booksDB.csv  catalog_mood.csv  streamlitcatalog.csv
notebooks/: 1_Webscraping_books.ipynb  3_Merge_cleaning.ipynb  4_EDA_clustering.ipynb  5_Sentiment_mood.ipynb  App_building.ipynb  EDA-Copy1.ipynb  EDA.ipynb  EDA_clustering.ipynb  GoogleBooks_API.ipynb  Merge_cleaning.ipynb  Webscraping_books.ipynb  functions.py
slides/: build_deck.js
